guard with macro

--- a/include/torch-mlir/Dialect/TorchConversion/Transforms/CMakeLists.txt
+++ b/include/torch-mlir/Dialect/TorchConversion/Transforms/CMakeLists.txt
@@ -1,5 +1,9 @@
 set(LLVM_TARGET_DEFINITIONS Passes.td)
-mlir_tablegen(Passes.h.inc -gen-pass-decls)
+if(TORCH_MLIR_ENABLE_MHLO)
+  mlir_tablegen(Passes.h.inc -gen-pass-decls -DTORCH_MLIR_ENABLE_MHLO)
+else()
+  mlir_tablegen(Passes.h.inc -gen-pass-decls)
+endif()
 add_public_tablegen_target(TorchMLIRTorchConversionPassIncGen)
 
 add_mlir_doc(Passes TorchMLIRTorchConversionTransforms ./ -gen-pass-doc)
