--- a/lib/Dialect/TorchConversion/Transforms/CMakeLists.txt
+++ b/lib/Dialect/TorchConversion/Transforms/CMakeLists.txt
@@ -12,7 +12,6 @@ set(LinkedLibs  MLIRIR
                 
 if(TORCH_MLIR_ENABLE_MHLO)
   list(APPEND LinkedLibs ChloPasses)
-  list(APPEND MhloContract VerifyMhloBackendContract.cpp)
 endif()
 
 add_mlir_library(TorchMLIRTorchConversionPasses
@@ -21,8 +20,7 @@ add_mlir_library(TorchMLIRTorchConversionPasses
   Passes.cpp
   VerifyLinalgOnTensorsBackendContract.cpp
   VerifyTosaBackendContract.cpp
-  ${MhloContract}
-
+  VerifyMhloBackendContract.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/torch-mlir/Dialect/TorchConversion/Transforms
