--- a/externals/llvm-external-projects/torch-mlir-dialects/tools/torch-mlir-dialects-opt/CMakeLists.txt
+++ b/externals/llvm-external-projects/torch-mlir-dialects/tools/torch-mlir-dialects-opt/CMakeLists.txt
@@ -9,6 +9,7 @@ set(LIBS
   MLIRFuncDialect
   MLIRTensorDialect
   MLIRTransforms
+  TorchMLIRTcpDialect
   TorchMLIRTMTensorDialect
   TorchMLIRTMTensorPasses
 )
