Conditional flag to enable TCP

--- a/externals/llvm-external-projects/torch-mlir-dialects/CMakeLists.txt
+++ b/externals/llvm-external-projects/torch-mlir-dialects/CMakeLists.txt
@@ -10,6 +10,11 @@ endif()
 
 option(MLIR_ENABLE_BINDINGS_PYTHON "Enables MLIR Python Bindings" OFF)
 
+option(TORCH_MLIR_DIALECTS_ENABLE_TCP "Add TCP dialect" OFF)
+if(TORCH_MLIR_DIALECTS_ENABLE_TCP)
+  add_definitions(-DTORCH_MLIR_DIALECTS_ENABLE_TCP)
+endif()
+
 set(TORCH_MLIR_DIALECTS_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 set(TORCH_MLIR_DIALECTS_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}")
 message(STATUS "Building torch-mlir-dialects project at ${TORCH_MLIR_DIALECTS_SOURCE_DIR} (into ${TORCH_MLIR_DIALECTS_BINARY_DIR})")
