--- a/externals/llvm-external-projects/torch-mlir-dialects/tools/torch-mlir-dialects-opt/CMakeLists.txt
+++ b/externals/llvm-external-projects/torch-mlir-dialects/tools/torch-mlir-dialects-opt/CMakeLists.txt
@@ -9,10 +9,13 @@ set(LIBS
   MLIRFuncDialect
   MLIRTensorDialect
   MLIRTransforms
-  TorchMLIRTcpDialect
   TorchMLIRTMTensorDialect
   TorchMLIRTMTensorPasses
 )
+
+if(TORCH_MLIR_DIALECTS_ENABLE_TCP)
+  list(APPEND LIBS TorchMLIRTcpDialect)
+endif()
 
 add_llvm_tool(torch-mlir-dialects-opt
   torch-mlir-dialects-opt.cpp
