--- a/build_tools/autogen_ltc_backend.yaml
+++ b/build_tools/autogen_ltc_backend.yaml
@@ -61,6 +61,7 @@ supported:
 # but their implementations call view operators (which we need to functionalize away).
 - block_diag
 - new_empty_strided
+- narrow_copy
 - pixel_shuffle
 - pixel_unshuffle
 - select_backward
@@ -73,9 +74,10 @@ supported:
 # List of ops that will take in symints for the size instead of ints
 symint:
 - empty.memory_format
+- new_empty_strided
 - expand
 - expand_copy
-# - narrow_copy
+- narrow_copy
 - view
 - view_copy
 
