[DO NOT MERGE] Prototype for external large weights.
This lowers them into ml_program.global

Example use like this:

```
import torch
import torch_mlir
import torchvision

resnet18 = torchvision.models.resnet18(pretrained=True)
resnet18.eval()

example_inputs = torch.randn(1, 2)
mlir_module = torch_mlir.compile(
    resnet18, torch.ones(1, 3, 224, 224), output_type="torch",
    use_external_references_if_numel_exceeds=1)
print(mlir_module)
```

Backend contract IR: https://gist.github.com/silvasean/aba4b3b01b5a5649f1216dc6dd6942d4
Linalg-on-tensors IR: https://gist.github.com/silvasean/5ed3b6de238995e232ef3e2cb5a9f609

--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(TorchToLinalg)
 add_subdirectory(TorchToSCF)
 add_subdirectory(TorchToArith)
+add_subdirectory(TorchToMLProgram)
 add_subdirectory(TorchToTosa)
 if(TORCH_MLIR_ENABLE_MHLO)
   add_subdirectory(TorchToMhlo)
@@ -12,6 +13,7 @@ add_subdirectory(Utils)
 set(linked_libs TorchMLIRTorchToLinalg
                 TorchMLIRTorchToSCF
                 TorchMLIRTorchToArith
+                TorchMLIRTorchToMLProgram
                 TorchMLIRTorchToTosa
                 TorchMLIRTorchToTMTensor
                 TorchMLIRConversionUtils)
