--- a/lib/Dialect/TorchConversion/IR/CMakeLists.txt
+++ b/lib/Dialect/TorchConversion/IR/CMakeLists.txt
@@ -7,6 +7,7 @@ add_mlir_dialect_library(TorchMLIRTorchConversionDialect
 
   DEPENDS
   MLIRTorchConversionOpsIncGen
+  MLIRTorchTypesIncGen
 
   LINK_COMPONENTS
   Core
