--- a/.github/workflows/RollPyTorch.yml
+++ b/.github/workflows/RollPyTorch.yml
@@ -22,15 +22,24 @@ jobs:
         python -m pip install wheel
         TM_PACKAGE_VERSION=${{ github.event.inputs.python_package_version }}
         printf "TORCH_MLIR_PYTHON_PACKAGE_VERSION=%s\n" $TM_PACKAGE_VERSION > ./torch_mlir_package_version
-        ./build_tools/python_deploy/build_linux_packages.sh
-        
-    - name: Build and Test
-      run: |
-        cd $GITHUB_WORKSPACE
+
+        # Fetch the most recent nightly PyTorch release
+        PT_RELEASE=$(python -m pip index versions -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html --pre torch | grep "Available versions" | tr ' ' '\n' | sort -nr | head -n1 | tr -d ',')
+        printf "\-f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html --pre torch==%s\n" "${PT_RELEASE}" > ./pytorch-requirements.txt
+
+        # Fetch the whl file associated with the nightly release
+        rm -f torch-"${PT_RELEASE}"-*.whl
+        python -m pip download -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html --pre "torch==${PT_RELEASE}"
+
+        # Read the commit hash from the downloaded whl file without extracting it
+        PT_HASH=$(unzip -p torch-"${PT_RELEASE}"-*.whl torch/version.py | grep git_version | awk '{ print $3 }' | tr -d "'")
+        rm torch-"${PT_RELEASE}"-*.whl
+
         TM_PACKAGES="out-of-tree" TM_USE_PYTORCH_BINARY="OFF" \
-        TM_PYTORCH_BRANCH=`git ls-remote https://github.com/pytorch/pytorch refs/heads/master` \
+        TORCH_MLIR_SRC_PYTORCH_BRANCH="${PT_HASH}" \
+        TORCH_MLIR_SRC_PYTORCH_RELEASE="${PT_RELEASE}" \
         ./build_tools/python_deploy/build_linux_packages.sh
-        
+
     #- name: Pushing changes
     #  uses: ad-m/github-push-action@v0.6.0
     #  with:
