--- a/lib/CAPI/CMakeLists.txt
+++ b/lib/CAPI/CMakeLists.txt
@@ -3,6 +3,7 @@ add_mlir_public_c_api_library(TorchMLIRCAPI
   Registration.cpp
   TorchOps.cpp
   TorchTypes.cpp
+  Transforms.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/torch-mlir-c/
@@ -16,6 +17,7 @@ add_mlir_public_c_api_library(TorchMLIRCAPI
   MLIRSupport
   TorchMLIRTorchDialect
   TorchMLIRInitAll
+  TorchMLIRTorchPasses
 )
 
 torch_mlir_target_includes(TorchMLIRCAPI)
