--- a/build_tools/autogen_ltc_backend.yaml
+++ b/build_tools/autogen_ltc_backend.yaml
@@ -78,8 +78,13 @@ symint:
 - expand
 - expand_copy
 - narrow_copy
+- slice_backward
+- slice_copy.Tensor
+- slice_scatter
 - view
 - view_copy
+- as_strided_copy
+- as_strided_scatter
 
 
 additional_ops:
