--- a/.github/workflows/RollPyTorch.yml
+++ b/.github/workflows/RollPyTorch.yml
@@ -25,7 +25,7 @@ jobs:
         python -m pip install wheel
 
         # Fetch the most recent nightly PyTorch release
-        PT_RELEASE=$(python -m pip index versions -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html --pre torch | grep "Available versions" | tr ' ' '\n' | sort -nr | head -n1 | tr -d ',' | sed 's/\([^+]*\).*/\1/')
+        PT_RELEASE=$(python -m pip index versions -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html --pre torch | grep "Available versions" | tr ' ' '\n' | grep "^[0-9]" | sort --version-sort --reverse | head -n1 | tr -d ',' | sed 's/\([^+]*\).*/\1/')
         printf -- "-f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html --pre torch==%s\n" "${PT_RELEASE}" > ./pytorch-requirements.txt
 
         # Fetch the whl file associated with the nightly release
