--- a/.github/workflows/RollPyTorch.yml
+++ b/.github/workflows/RollPyTorch.yml
@@ -29,13 +29,13 @@ jobs:
         printf -- "-f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html --pre torch==%s\n" "${PT_RELEASE}" > ./pytorch-requirements.txt
 
         # Fetch the whl file associated with the nightly release
-        rm -f torch-"${PT_RELEASE}"-*.whl
+        rm -f torch-"${PT_RELEASE}"*.whl
         python -m pip download -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html --pre "torch==${PT_RELEASE}"
 
         # Read the commit hash from the downloaded whl file without extracting it
-        PT_HASH=$(unzip -p torch-"${PT_RELEASE}"-*.whl torch/version.py | grep git_version | awk '{ print $3 }' | tr -d "'")
+        PT_HASH=$(unzip -p torch-"${PT_RELEASE}"*.whl torch/version.py | grep git_version | awk '{ print $3 }' | tr -d "'")
         echo "$PT_HASH" > ./pytorch-version.txt
-        rm torch-"${PT_RELEASE}"-*.whl
+        rm torch-"${PT_RELEASE}"*.whl
 
         # Write the release and hash to the environment file so that we can
         # retrieve them when creating a PR
