build: schedule cronjob to run RollPyTorch action
This patch schedules the RollPyTorch action to be run at noon UTC, which
roughly corresponds to 4am Pacific Time.  We pick this time since the
commit for PyTorch nightly releases are picked just after midnight
Pacific Time and the nightly release artifacts are produced in about 2
to 3 hours after the commit is picked.

--- a/.github/workflows/RollPyTorch.yml
+++ b/.github/workflows/RollPyTorch.yml
@@ -1,6 +1,9 @@
 name: Roll PyTorch
 
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: '0 12 * * *'
+  workflow_dispatch:
 
 jobs:
   build_linux:
