--- a/lib/Dialect/Torch/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Torch/Transforms/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_mlir_library(TorchMLIRTorchPasses
   AdjustCallingConventions.cpp
   DecomposeComplexOps.cpp
-  DropShapeCalculations.cpp
+  DropAbstractInterpCalculations.cpp
   EraseModuleInitializer.cpp
   Passes.cpp
   GlobalizeObjectGraph.cpp
@@ -13,8 +13,12 @@ add_mlir_library(TorchMLIRTorchPasses
   RefinePublicReturn.cpp
   RefineTypes.cpp
   ReifyShapeCalculations.cpp
-  ShapeLibrary.cpp
+  ReifyDtypeCalculations.cpp
+  ReifyAbstractInterpCalculationsUtils.cpp
+  AbstractInterpLibrary.cpp
   SimplifyShapeCalculations.cpp
+  SimplifyDtypeCalculations.cpp
+  SimplifyAbstractInterpCalculationsUtils.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/torch-mlir/Dialect/Torch/Transforms
