--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -104,7 +104,8 @@ endif()
 
 ################################################################################
 # Custom op example
-# Required for running the update_torch_ods.sh and update_shape_lib.sh scripts.
+# Required for running the update_torch_ods.sh and update_abstract_interp_lib.sh
+# scripts.
 ################################################################################
 
 # add_subdirectory(torch_mlir/_torch_mlir_custom_op_example)
