--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -56,6 +56,9 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.WORKFLOW_INVOCATION_TOKEN }}
       with:
         release_id: ${{ github.event.inputs.release_id }}
+    - name: DEBUG List Files
+      if: github.event.inputs.release_id != ''
+      run: find .
     - name: Publish to PyPI
       if: github.event.inputs.release_id != ''
       uses: pypa/gh-action-pypi-publish@v1.5.1
