[Tcp] Add torch-to-tcp pass

--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -5,6 +5,9 @@ add_subdirectory(TorchToTosa)
 if(TORCH_MLIR_ENABLE_MHLO)
   add_subdirectory(TorchToMhlo)
 endif()
+if (TORCH_MLIR_ENABLE_TCP)
+  add_subdirectory(TorchToTcp)
+endif()
 add_subdirectory(TorchToTMTensor)
 add_subdirectory(TorchConversionToMLProgram)
 add_subdirectory(Utils)
@@ -19,6 +22,9 @@ set(linked_libs TorchMLIRTorchToLinalg
                 TorchMLIRConversionUtils)
 if(TORCH_MLIR_ENABLE_MHLO)
   list(APPEND linked_libs TorchMLIRTorchToMhlo)
+endif()
+if(TORCH_MLIR_ENABLE_TCP)
+  list(APPEND linked_libs TorchMLIRTorchToTcp)
 endif()
 
 add_mlir_library(TorchMLIRConversionPasses
