Remove all but one of valsem ops + move fill.Scalar to elementwise
This commit removes almost all of the valsem ops, since the value
semantics version of the ops now exist in PyTorch. The only op missing
is `aten.bernoulli_.float`. In addition, this commit also simplifies
the implementation of `aten.fill.Scalar` by moving it to the pattern
that converts elementwise ops.

--- a/build_tools/autogen_ltc_backend.yaml
+++ b/build_tools/autogen_ltc_backend.yaml
@@ -1,6 +1,7 @@
 blacklist:
 # List of unsupported ops in LTC autogen because of some error
 - _index_put_impl_  # Error: TODO not sure if there are other valid types to handle here
+- _index_put_impl # Error: TODO not sure if there are other valid types to handle here
 - empty_like  # Error: TODO add support for type BaseType(name=<BaseTy.MemoryFormat: 12>)
 - index.Tensor  # Error: TODO not sure if there are other valid types to handle here
 - index_put  # Error: TODO not sure if there are other valid types to handle here
@@ -23,6 +24,7 @@ blacklist:
 - arange
 - arange.start
 - arange.start_step
+- fill.Scalar
 
 # Disabled in favour of functionalized alternatives
 - _reshape_alias
